parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    FLOAT
    KEYWORD

Grammar

Rule 0     S' -> run_command
Rule 1     run_command -> create_server
Rule 2     run_command -> allow_conns
Rule 3     run_command -> close_connection
Rule 4     run_command -> show_clients
Rule 5     run_command -> close_client_connection_in_server
Rule 6     run_command -> create_client
Rule 7     run_command -> send_message
Rule 8     run_command -> send_spec_message
Rule 9     run_command -> create_server_for_all
Rule 10    run_command -> show_server_info
Rule 11    create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING
Rule 12    create_server_for_all -> INITIATE SERVER COLON PORT INT COMMA NAME STRING
Rule 13    create_client -> CONNECT TO SERVER COLON ADDRESS IP COMMA PORT INT
Rule 14    allow_conns -> ALLOW CONNECTION IN STRING COLON INT
Rule 15    show_clients -> SHOW CLIENTS INFO IN STRING
Rule 16    show_server_info -> SHOW STRING INFO
Rule 17    close_connection -> CLOSE CONNECTION COLON STRING
Rule 18    close_client_connection_in_server -> CLOSE CONNECTION COLON STRING IN STRING
Rule 19    send_message -> SEND MESSAGE COLON STRING
Rule 20    send_spec_message -> SEND MESSAGE TO STRING COLON STRING

Terminals, with rules where they appear

ADDRESS              : 11 13
ALLOW                : 14
ASSIGN               : 
CLIENTS              : 15
CLOSE                : 17 18
COLON                : 11 12 13 14 17 18 19 20
COMMA                : 11 11 12 13
CONNECT              : 13
CONNECTION           : 14 17 18
FLOAT                : 
IN                   : 14 15 18
INFO                 : 15 16
INITIATE             : 11 12
INT                  : 11 12 13 14
IP                   : 11 13
KEYWORD              : 
MESSAGE              : 19 20
NAME                 : 11 12
PORT                 : 11 12 13
SEND                 : 19 20
SERVER               : 11 12 13
SHOW                 : 15 16
STRING               : 11 12 14 15 16 17 18 18 19 20 20
TO                   : 13 20
error                : 

Nonterminals, with rules where they appear

allow_conns          : 2
close_client_connection_in_server : 5
close_connection     : 3
create_client        : 6
create_server        : 1
create_server_for_all : 9
run_command          : 0
send_message         : 7
send_spec_message    : 8
show_clients         : 4
show_server_info     : 10

Parsing method: LALR

state 0

    (0) S' -> . run_command
    (1) run_command -> . create_server
    (2) run_command -> . allow_conns
    (3) run_command -> . close_connection
    (4) run_command -> . show_clients
    (5) run_command -> . close_client_connection_in_server
    (6) run_command -> . create_client
    (7) run_command -> . send_message
    (8) run_command -> . send_spec_message
    (9) run_command -> . create_server_for_all
    (10) run_command -> . show_server_info
    (11) create_server -> . INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING
    (14) allow_conns -> . ALLOW CONNECTION IN STRING COLON INT
    (17) close_connection -> . CLOSE CONNECTION COLON STRING
    (15) show_clients -> . SHOW CLIENTS INFO IN STRING
    (18) close_client_connection_in_server -> . CLOSE CONNECTION COLON STRING IN STRING
    (13) create_client -> . CONNECT TO SERVER COLON ADDRESS IP COMMA PORT INT
    (19) send_message -> . SEND MESSAGE COLON STRING
    (20) send_spec_message -> . SEND MESSAGE TO STRING COLON STRING
    (12) create_server_for_all -> . INITIATE SERVER COLON PORT INT COMMA NAME STRING
    (16) show_server_info -> . SHOW STRING INFO

    INITIATE        shift and go to state 12
    ALLOW           shift and go to state 13
    CLOSE           shift and go to state 14
    SHOW            shift and go to state 15
    CONNECT         shift and go to state 16
    SEND            shift and go to state 17

    run_command                    shift and go to state 1
    create_server                  shift and go to state 2
    allow_conns                    shift and go to state 3
    close_connection               shift and go to state 4
    show_clients                   shift and go to state 5
    close_client_connection_in_server shift and go to state 6
    create_client                  shift and go to state 7
    send_message                   shift and go to state 8
    send_spec_message              shift and go to state 9
    create_server_for_all          shift and go to state 10
    show_server_info               shift and go to state 11

state 1

    (0) S' -> run_command .



state 2

    (1) run_command -> create_server .

    $end            reduce using rule 1 (run_command -> create_server .)


state 3

    (2) run_command -> allow_conns .

    $end            reduce using rule 2 (run_command -> allow_conns .)


state 4

    (3) run_command -> close_connection .

    $end            reduce using rule 3 (run_command -> close_connection .)


state 5

    (4) run_command -> show_clients .

    $end            reduce using rule 4 (run_command -> show_clients .)


state 6

    (5) run_command -> close_client_connection_in_server .

    $end            reduce using rule 5 (run_command -> close_client_connection_in_server .)


state 7

    (6) run_command -> create_client .

    $end            reduce using rule 6 (run_command -> create_client .)


state 8

    (7) run_command -> send_message .

    $end            reduce using rule 7 (run_command -> send_message .)


state 9

    (8) run_command -> send_spec_message .

    $end            reduce using rule 8 (run_command -> send_spec_message .)


state 10

    (9) run_command -> create_server_for_all .

    $end            reduce using rule 9 (run_command -> create_server_for_all .)


state 11

    (10) run_command -> show_server_info .

    $end            reduce using rule 10 (run_command -> show_server_info .)


state 12

    (11) create_server -> INITIATE . SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING
    (12) create_server_for_all -> INITIATE . SERVER COLON PORT INT COMMA NAME STRING

    SERVER          shift and go to state 18


state 13

    (14) allow_conns -> ALLOW . CONNECTION IN STRING COLON INT

    CONNECTION      shift and go to state 19


state 14

    (17) close_connection -> CLOSE . CONNECTION COLON STRING
    (18) close_client_connection_in_server -> CLOSE . CONNECTION COLON STRING IN STRING

    CONNECTION      shift and go to state 20


state 15

    (15) show_clients -> SHOW . CLIENTS INFO IN STRING
    (16) show_server_info -> SHOW . STRING INFO

    CLIENTS         shift and go to state 21
    STRING          shift and go to state 22


state 16

    (13) create_client -> CONNECT . TO SERVER COLON ADDRESS IP COMMA PORT INT

    TO              shift and go to state 23


state 17

    (19) send_message -> SEND . MESSAGE COLON STRING
    (20) send_spec_message -> SEND . MESSAGE TO STRING COLON STRING

    MESSAGE         shift and go to state 24


state 18

    (11) create_server -> INITIATE SERVER . COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING
    (12) create_server_for_all -> INITIATE SERVER . COLON PORT INT COMMA NAME STRING

    COLON           shift and go to state 25


state 19

    (14) allow_conns -> ALLOW CONNECTION . IN STRING COLON INT

    IN              shift and go to state 26


state 20

    (17) close_connection -> CLOSE CONNECTION . COLON STRING
    (18) close_client_connection_in_server -> CLOSE CONNECTION . COLON STRING IN STRING

    COLON           shift and go to state 27


state 21

    (15) show_clients -> SHOW CLIENTS . INFO IN STRING

    INFO            shift and go to state 28


state 22

    (16) show_server_info -> SHOW STRING . INFO

    INFO            shift and go to state 29


state 23

    (13) create_client -> CONNECT TO . SERVER COLON ADDRESS IP COMMA PORT INT

    SERVER          shift and go to state 30


state 24

    (19) send_message -> SEND MESSAGE . COLON STRING
    (20) send_spec_message -> SEND MESSAGE . TO STRING COLON STRING

    COLON           shift and go to state 31
    TO              shift and go to state 32


state 25

    (11) create_server -> INITIATE SERVER COLON . ADDRESS IP COMMA PORT INT COMMA NAME STRING
    (12) create_server_for_all -> INITIATE SERVER COLON . PORT INT COMMA NAME STRING

    ADDRESS         shift and go to state 33
    PORT            shift and go to state 34


state 26

    (14) allow_conns -> ALLOW CONNECTION IN . STRING COLON INT

    STRING          shift and go to state 35


state 27

    (17) close_connection -> CLOSE CONNECTION COLON . STRING
    (18) close_client_connection_in_server -> CLOSE CONNECTION COLON . STRING IN STRING

    STRING          shift and go to state 36


state 28

    (15) show_clients -> SHOW CLIENTS INFO . IN STRING

    IN              shift and go to state 37


state 29

    (16) show_server_info -> SHOW STRING INFO .

    $end            reduce using rule 16 (show_server_info -> SHOW STRING INFO .)


state 30

    (13) create_client -> CONNECT TO SERVER . COLON ADDRESS IP COMMA PORT INT

    COLON           shift and go to state 38


state 31

    (19) send_message -> SEND MESSAGE COLON . STRING

    STRING          shift and go to state 39


state 32

    (20) send_spec_message -> SEND MESSAGE TO . STRING COLON STRING

    STRING          shift and go to state 40


state 33

    (11) create_server -> INITIATE SERVER COLON ADDRESS . IP COMMA PORT INT COMMA NAME STRING

    IP              shift and go to state 41


state 34

    (12) create_server_for_all -> INITIATE SERVER COLON PORT . INT COMMA NAME STRING

    INT             shift and go to state 42


state 35

    (14) allow_conns -> ALLOW CONNECTION IN STRING . COLON INT

    COLON           shift and go to state 43


state 36

    (17) close_connection -> CLOSE CONNECTION COLON STRING .
    (18) close_client_connection_in_server -> CLOSE CONNECTION COLON STRING . IN STRING

    $end            reduce using rule 17 (close_connection -> CLOSE CONNECTION COLON STRING .)
    IN              shift and go to state 44


state 37

    (15) show_clients -> SHOW CLIENTS INFO IN . STRING

    STRING          shift and go to state 45


state 38

    (13) create_client -> CONNECT TO SERVER COLON . ADDRESS IP COMMA PORT INT

    ADDRESS         shift and go to state 46


state 39

    (19) send_message -> SEND MESSAGE COLON STRING .

    $end            reduce using rule 19 (send_message -> SEND MESSAGE COLON STRING .)


state 40

    (20) send_spec_message -> SEND MESSAGE TO STRING . COLON STRING

    COLON           shift and go to state 47


state 41

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP . COMMA PORT INT COMMA NAME STRING

    COMMA           shift and go to state 48


state 42

    (12) create_server_for_all -> INITIATE SERVER COLON PORT INT . COMMA NAME STRING

    COMMA           shift and go to state 49


state 43

    (14) allow_conns -> ALLOW CONNECTION IN STRING COLON . INT

    INT             shift and go to state 50


state 44

    (18) close_client_connection_in_server -> CLOSE CONNECTION COLON STRING IN . STRING

    STRING          shift and go to state 51


state 45

    (15) show_clients -> SHOW CLIENTS INFO IN STRING .

    $end            reduce using rule 15 (show_clients -> SHOW CLIENTS INFO IN STRING .)


state 46

    (13) create_client -> CONNECT TO SERVER COLON ADDRESS . IP COMMA PORT INT

    IP              shift and go to state 52


state 47

    (20) send_spec_message -> SEND MESSAGE TO STRING COLON . STRING

    STRING          shift and go to state 53


state 48

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA . PORT INT COMMA NAME STRING

    PORT            shift and go to state 54


state 49

    (12) create_server_for_all -> INITIATE SERVER COLON PORT INT COMMA . NAME STRING

    NAME            shift and go to state 55


state 50

    (14) allow_conns -> ALLOW CONNECTION IN STRING COLON INT .

    $end            reduce using rule 14 (allow_conns -> ALLOW CONNECTION IN STRING COLON INT .)


state 51

    (18) close_client_connection_in_server -> CLOSE CONNECTION COLON STRING IN STRING .

    $end            reduce using rule 18 (close_client_connection_in_server -> CLOSE CONNECTION COLON STRING IN STRING .)


state 52

    (13) create_client -> CONNECT TO SERVER COLON ADDRESS IP . COMMA PORT INT

    COMMA           shift and go to state 56


state 53

    (20) send_spec_message -> SEND MESSAGE TO STRING COLON STRING .

    $end            reduce using rule 20 (send_spec_message -> SEND MESSAGE TO STRING COLON STRING .)


state 54

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT . INT COMMA NAME STRING

    INT             shift and go to state 57


state 55

    (12) create_server_for_all -> INITIATE SERVER COLON PORT INT COMMA NAME . STRING

    STRING          shift and go to state 58


state 56

    (13) create_client -> CONNECT TO SERVER COLON ADDRESS IP COMMA . PORT INT

    PORT            shift and go to state 59


state 57

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT . COMMA NAME STRING

    COMMA           shift and go to state 60


state 58

    (12) create_server_for_all -> INITIATE SERVER COLON PORT INT COMMA NAME STRING .

    $end            reduce using rule 12 (create_server_for_all -> INITIATE SERVER COLON PORT INT COMMA NAME STRING .)


state 59

    (13) create_client -> CONNECT TO SERVER COLON ADDRESS IP COMMA PORT . INT

    INT             shift and go to state 61


state 60

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA . NAME STRING

    NAME            shift and go to state 62


state 61

    (13) create_client -> CONNECT TO SERVER COLON ADDRESS IP COMMA PORT INT .

    $end            reduce using rule 13 (create_client -> CONNECT TO SERVER COLON ADDRESS IP COMMA PORT INT .)


state 62

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME . STRING

    STRING          shift and go to state 63


state 63

    (11) create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING .

    $end            reduce using rule 11 (create_server -> INITIATE SERVER COLON ADDRESS IP COMMA PORT INT COMMA NAME STRING .)

